# corvid-agent-nano

./: .atlasignore  .gitignore  .trust.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  GETTING_STARTED.md  LICENSE  README.md  fledge.toml  specsync-registry.toml  specsync.json  tsconfig.json
.github/workflows/: build.yml  checks.yml  docs.yml  lint.yml  spec-sync.yml  test.yml  trust.yml
.specsync/: adoption-report.json  config.toml  cross-project-refs.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-the-unified-trust-1-0-0-governance-gate/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification-attempts.json  verification.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-the-unified-trust-1-0-0-governance-gate/deltas/: nano-cli.md  plugin-cli.md  plugin-host.md  plugin-macros.md  plugin-personality.md  plugin-sdk.md  transaction.md
.specsync/changes/CHG-0002-complete-governance-integration-coverage-for-the-specsync-5-and-trust-1-migratio/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
crates/algochat/: Cargo.toml
crates/algochat/src/: client.rs  lib.rs  listener.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  lib.rs  message.rs  storage.rs
crates/corvid-plugin-cli/: Cargo.toml
crates/corvid-plugin-cli/src/: lib.rs  main.rs  scaffold.rs  validate.rs
crates/corvid-plugin-host/: Cargo.toml
crates/corvid-plugin-host/src/: discovery.rs  engine.rs  executor.rs  invoke.rs  lib.rs  loader.rs  main.rs  registry.rs  sandbox.rs  wasm_mem.rs
crates/corvid-plugin-host/src/host_functions/: algo.rs  db.rs  fs.rs  http.rs  llm.rs  messaging.rs  mod.rs  storage.rs  tts.rs
crates/corvid-plugin-host/tests/: e2e.rs
crates/corvid-plugin-macros/: Cargo.toml
crates/corvid-plugin-macros/src/: lib.rs
crates/corvid-plugin-sdk/: Cargo.toml
crates/corvid-plugin-sdk/src/: capability.rs  context.rs  error.rs  host_api.rs  lib.rs  manifest.rs  service.rs  tool.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encrypt.rs  identity.rs  lib.rs
crates/nano-runtime/: Cargo.toml
crates/nano-runtime/src/: action.rs  event.rs  lib.rs  plugin.rs  runtime.rs  state.rs
crates/nano-runtime/src/plugins/: auto_reply.rs  hub.rs  mod.rs
crates/nano-transport/: Cargo.toml
crates/nano-transport/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md  security.md  storage.md
docs/src/commands/: change-password.md  config.md  contacts.md  fund.md  groups.md  import.md  inbox.md  info.md  mcp.md  overview.md  plugin.md  register.md  run.md  send.md  setup.md  status.md
docs/src/getting-started/: installation.md  networks.md  quick-start.md  setup-wizard.md
docs/src/guides/: contacts-encryption.md  custom-transport.md  demo-walkthrough.md  examples.md  group-channels.md  hub-connection.md  mcp-integration.md  nano-runtime.md  p2p-mode.md  plugin-development.md  plugins.md
docs/src/reference/: environment-variables.md  faq.md  troubleshooting.md
plugins/coding-companion/: Cargo.toml
plugins/coding-companion/src/: lib.rs
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
plugins/llm-personality/: Cargo.toml
plugins/llm-personality/src/: lib.rs
plugins/personality/: Cargo.toml
plugins/personality/src/: lib.rs
plugins/tts-voice/: Cargo.toml
plugins/tts-voice/src/: lib.rs
scripts/: specsync.sh
server/: global.d.ts  package.json
server/plugins/: rust-bridge.test.ts  rust-bridge.ts
server/routes/: plugins.ts
specs/: README.md  _template.spec.md
specs/agent/: agent.spec.md
specs/algochat/: algochat.spec.md
specs/binary/: a2a-server.spec.md  contacts.spec.md  keystore.spec.md  nano-cli.spec.md  requirements.md  transaction.spec.md  wallet.spec.md
specs/core/: core.spec.md
specs/crypto/: crypto.spec.md
specs/hub/: hub.spec.md
specs/identity/: identity.spec.md
specs/plugin/: plugin-bridge.spec.md  plugin-cli.spec.md  plugin-coding-companion.spec.md  plugin-host.spec.md  plugin-macros.spec.md  plugin-personality.spec.md  plugin-sdk.spec.md  requirements.md
specs/transaction/: transaction.spec.md
specs/vault/: vault.spec.md
src/: a2a.rs  agent.rs  algochat_transport.rs  algorand.rs  bridge.rs  config.rs  contacts.rs  groups.rs  health.rs  hub.rs  identity.rs  keystore.rs  main.rs  mcp.rs  sidecar.rs  storage.rs  transaction.rs  ui.rs  vault.rs  wallet.rs  wizard.rs
tests/: e2e_a2a.rs  e2e_cli.rs  e2e_config.rs  e2e_runtime.rs
