[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/CorvidLabs/corvid-agent-nano"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
algochat = { git = "https://github.com/CorvidLabs/rs-algochat", tag = "v0.2.1" }
hex = "0.4"
data-encoding = "2"
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
rmp = "0.8"
rmp-serde = "1"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rpassword = "7"
dialoguer = "0.11"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
chrono = "0.4"
thiserror = "1"

[package]
name = "corvid-agent-nano"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nano"
path = "src/main.rs"

[dependencies]
corvid-core = { path = "crates/core" }
algochat.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
hex.workspace = true
data-encoding.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
rand.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
rpassword.workspace = true
dialoguer.workspace = true
zeroize.workspace = true
base64.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
