[package]
name = "corvid-algochat"
version.workspace = true
edition.workspace = true

[dependencies]
corvid-crypto = { path = "../crypto" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
base64.workspace = true
