[package]
name = "corvid-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
algochat.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
