[package]
name = "corvid-plugin-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "corvid-plugin"
path = "src/main.rs"

[lib]
name = "corvid_plugin_cli"
path = "src/lib.rs"

[dependencies]
corvid-plugin-sdk = { path = "../corvid-plugin-sdk" }
corvid-plugin-host = { path = "../corvid-plugin-host" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rusqlite.workspace = true
semver.workspace = true
regex.workspace = true
toml = "0.8"
hex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
