[package]
name = "corvid-plugin-host"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "corvid-plugin-host"
path = "src/main.rs"

[lib]
name = "corvid_plugin_host"
path = "src/lib.rs"

[dependencies]
corvid-plugin-sdk = { path = "../corvid-plugin-sdk" }
wasmtime = { version = "22", features = ["cache", "cranelift"] }
wasmtime-wasi = "22"
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
scopeguard = "1"
regex = "1"
semver = "1"
thiserror.workspace = true
ureq = "3"
base64.workspace = true

[dev-dependencies]
tempfile = "3"
