[package]
name = "corvid-plugin-sdk"
description = "Stable public contract for corvid-agent plugin authors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
