[workspace]

[package]
name = "coding-companion"
version = "0.1.0"
edition = "2021"
description = "Coding companion plugin for corvid-agent — LLM-backed code analysis, review, explanation, and Q&A with project file context"

[lib]
crate-type = ["cdylib"]

[dependencies]
corvid-plugin-sdk = { path = "../../crates/corvid-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[profile.release]
opt-level = "s"
lto = true
