[workspace]

[package]
name = "hello-world-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
corvid-plugin-sdk = { path = "../../crates/corvid-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[profile.release]
opt-level = "s"
lto = true
