[workspace]

[package]
name = "llm-personality"
version = "0.1.0"
edition = "2021"
description = "LLM personality engine plugin for corvid-agent — pluggable LLM backend with persona config, emotion tracking, and conversation memory"

[lib]
crate-type = ["cdylib"]

[dependencies]
corvid-plugin-sdk = { path = "../../crates/corvid-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[profile.release]
opt-level = "s"
lto = true
