[workspace]

[package]
name = "corvid-personality"
version = "0.1.0"
edition = "2021"
description = "LLM personality engine — pluggable persona, emotion tracking, conversation memory"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
corvid-plugin-sdk = { path = "../../crates/corvid-plugin-sdk" }
corvid-plugin-macros = { path = "../../crates/corvid-plugin-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[dev-dependencies]
# No extra dev deps needed — logic is tested without WASM
