[workspace]

[package]
name = "tts-voice"
version = "0.1.0"
edition = "2021"
description = "TTS voice output plugin for corvid-agent — Piper-backed text-to-speech with voice selection and speed control"

[lib]
crate-type = ["cdylib"]

[dependencies]
corvid-plugin-sdk = { path = "../../crates/corvid-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[profile.release]
opt-level = "s"
lto = true
